--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nhóm 7 - Thư Viện Ảnh</title>
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="/assets/css/index.css">
     <script defer src="./main.js"></script>
     <script defer src="gallery.js"></script>
 </head>
@@ -138,5 +138,6 @@
     </div>
     <!-- END CHATBOT WIDGET -->
 </body>
+
 
 </html>
