--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Admin - Quản lý người dùng</title>
-    <link rel="stylesheet" href="./assets/css/admin.css">
+    <link rel="stylesheet" href="assets/css/admin.css">
 </head>
 
 <body class="admin-page">
@@ -53,5 +53,6 @@
 
     <script src="admin.js"></script>
 </body>
+
 
 </html>
