--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nhóm 7 - Thư Viện Ảnh</title>
     <link rel="stylesheet" href="index.css">
-    <script defer src="./main.js"></script>
+    <script defer src="main.js"></script>
     <script defer src="gallery.js"></script>
 </head>
 
@@ -141,5 +141,6 @@
 
 
 </html>
+
 
 
