--- a/album-detail.html
+++ b/album-detail.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chi tiết album | Thư Viện Ảnh</title>
-    <link rel="stylesheet" href="./assets/css/album-detail.css">
-    <script defer src="./main.js"></script>
-    <script defer src="./album-detail.js"></script>
+    <link rel="stylesheet" href="album-detail.css">
+    <script defer src="main.js"></script>
+    <script defer src="album-detail.js"></script>
 </head>
 
 <body>
@@ -59,5 +59,6 @@
         <p>© 2025 Nhóm 7 - Bài Kiểm Tra Kết Thúc Môn.</p>
     </footer>
 </body>
+
 
 </html>
