--- a/media-admin.html
+++ b/media-admin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Admin/Editor - Quản lý Album & Ảnh</title>
     <!-- dùng lại css admin -->
-    <link rel="stylesheet" href="./assets/css/media-admin.css">
+    <link rel="stylesheet" href="media-admin.css">
 </head>
 
 <body class="admin-page">
@@ -109,5 +109,6 @@
 
     <script src="media-admin.js"></script>
 </body>
+
 
 </html>
