--- a/post-detail.html
+++ b/post-detail.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chi tiết bài viết | Thư Viện Ảnh</title>
-    <link rel="stylesheet" href="./assets/css/post-detail.css">
-    <script defer src="./main.js"></script>
-    <script defer src="./post-detail.js"></script>
+    <link rel="stylesheet" href="post-detail.css">
+    <script defer src="main.js"></script>
+    <script defer src="post-detail.js"></script>
 </head>
 
 <body>
@@ -52,5 +52,6 @@
             <p>Đang tải bài viết...</p>
         </section>
     </main>
+
 
     <footer id="footer">
