--- a/posts-admin.html
+++ b/posts-admin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Admin - Quản lý bài viết</title>
     <!-- dùng lại css admin -->
-    <link rel="stylesheet" href="./assets/css/posts-admin.css">
+    <link rel="stylesheet" href="posts-admin.css">
 </head>
 
 <body class="admin-page">
@@ -79,5 +79,6 @@
 
     <script src="posts-admin.js"></script>
 </body>
+
 
 </html>
