--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Đăng ký tài khoản</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="./assets/css/register.css" />
+    <link rel="stylesheet" href="register.css" />
     <script src="register.js"></script>
 
 </head>
@@ -63,5 +63,6 @@
 
 
 </body>
+
 
 </html>
