Fix file paths in user-info.html

--- a/user-info.html
+++ b/user-info.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Thông tin người dùng</title>
-    <link rel="stylesheet" href="./assets/css/user-info.css">
+    <link rel="stylesheet" href="user-info.css">
 </head>
 
 <body>
@@ -15,7 +15,8 @@
         <a href="index.html" class="btn" id="back-link">Về trang chính</a>
     </div>
 
-    <script defer src="./user-info.js"></script>
+    <script defer src="user-info.js"></script>
 </body>
+
 
 </html>
